--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,10 +53,10 @@ jobs:
         aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
         aws-region           : ${{ env.AWS_REGION_NAME }}
     
-    - name: Create New ElasticBeanstalk Application
+    - name: Create new ElasticBeanstalk Application
       run : |
         aws elasticbeanstalk create-application-version \
-        --application-name: ${{ env.EB_APPLICATION_NAME }} \
+        --application-name ${{ env.EB_APPLICATION_NAME }} \
         --source-bundle S3Bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}",S3Key="${{ env.DEPLOY_PACKAGE_NAME }}" \
         --version-label "Ver-${{ github.sha }}" \
         --description "CommitSHA-${{ github.sha}}"
