--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
         --description "CoimmitSHA-${{ github.sha }}"
         
     - name: Deploy new ElascticBeanstalk Application Version
-      run : aws elasticbeanstalk update-enviroment --enviroment-name ${{ env.EB_ENVIROMENT_NAME }} --version-label "Ver-${{ github.sha }}"
+      run : aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIROMENT_NAME }} --version-label "Ver-${{ github.sha }}"
       
     - name: Print Happy Message for CD Finish
       run : echo "CD Pipeline part Finished successfully!"
