--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 
 name: CI-CD-Pipeline-to-AWS-ElasticBeastalk
 env:
-  EB_PACKAGE_S3_BUCKET_NAME : "adv-it-flask-application-packages"
+  EB_PACKAGE_S3_BUCKET_NAME : "aleksey-flask-application-packages"
   EB_APPLICATION_NAME       : "MyFlask"
   EB_ENVIRONMENT_NAME       : "MyFlask-env"
   DEPLOY_PACKAGE_NAME       : "flask_app_${{ github.sha }}.zip"
@@ -11,7 +11,7 @@ env:
 on: 
   push:
     branches: 
-      - master
+      - main
 
 jobs:
   my_ci_part:
